# cnb-rates

./: LICENSE  README.md  pyproject.toml  ranges.txt
cnb_rates/: __init__.py  __main__.py  cli.py  core.py  currency.py  data.py  exceptions.py  rates.py  utils.py
data/: all.csv.xz  curs
tests/: test_cnb_rates.py
