[project]
name = "cnb-rates"
version = "0.2.0"
description = "Another Czech National Bank exchange rates package"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
authors = [{name = "Tomas Karasek", email = "tom.to.the.k@gmail.com"}]
license = {text = "MIT"}
keywords = ["exchange-rates", "czech-national-bank", "currency", "czk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

[project.urls]
Homepage = "https://github.com/t0mk/cnb-rates"
Repository = "https://github.com/t0mk/cnb-rates"
Documentation = "https://github.com/t0mk/cnb-rates#readme"

[project.scripts]
cnb-rates = "cnb_rates.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cnb_rates*"]

[tool.setuptools.package-data]
cnb_rates = ["../data/*.xz"]
